Kerberos: temporary accounts not cleaned up, spams journal at crazy high rate
Gnome-online accounts creates a long list of expired "temporary logins" from kerberos logins that are not cleaned up, causing my logfile to be spammed by goa errors.
This is what my ~/.config/goa-1.0/accounts.conf looks like:
[Account account_1531739258_603]
IsTemporary=true
SessionId=8032df612956a6ef9e874c2d5b48c52e
[Account account_1531739266_604]
IsTemporary=true
SessionId=89e2991aae5283b72b2df7725b4c70b2
... Repeated 20 times ....
[Account account_1531739281_607]
IsTemporary=true
SessionId=89e2991aae5283b72b2df7725b4c70b2
[Account account_1531739701_691]
Provider=kerberos
Identity=akorsunsky@EXAMPLE.COM
PresentationIdentity=akorsunsky@EXAMPLE.COM
Realm=EXAMPLE.COM
SessionId=89e2991aae5283b72b2df7725b4c70b2
IsTemporary=true
TicketingEnabled=true
This causes the following errors in my journal to appear several hundred times, every single second:
Dez 11 15:45:58 goa-daemon[3457]: Unsupported account type (null) for ID account_1532343191_6915 (no provider)
Dez 11 15:45:58 goa-daemon[3457]: Unsupported account type (null) for ID account_1532343211_6919 (no provider)
Dez 11 15:45:58 goa-daemon[3457]: Unsupported account type (null) for ID account_1532345516_7380 (no provider)
Dez 11 15:45:58 goa-daemon[3457]: Unsupported account type (null) for ID account_1532345746_7426 (no provider)
Dez 11 15:45:58 goa-daemon[3457]: Unsupported account type (null) for ID account_1532345751_7427 (no provider)
Dez 11 15:45:58 goa-daemon[3457]: Unsupported account type (null) for ID account_1532345771_7431 (no provider)
Dez 11 15:45:58 goa-daemon[3457]: Unsupported account type (null) for ID account_1532345785_1947 (no provider)
Dez 11 15:45:58 goa-daemon[3457]: Unsupported account type (null) for ID account_1532346131_7503 (no provider)
Dez 11 15:45:58 goa-daemon[3457]: Unsupported account type (null) for ID account_1532346166_7510 (no provider)
Dez 11 15:45:58 goa-daemon[3457]: Unsupported account type (null) for ID account_1532346181_7513 (no provider)
Dez 11 15:45:58 goa-daemon[3457]: Unsupported account type (null) for ID account_1532346196_7516 (no provider)
My machine has been up for 10 minutes, and here's how many times the message has been written
$ journalctl -b --no-hostname | grep "Unsupported account type" | wc -l
976865
976865 messages in 10 minutes. Nine hundred seventy six thousand eigh hundred sixty five.
Note that removing ~/.config/goa-1.0/accounts.conf helps temporary, but on reboot or new login it is recreated, starts filling up with these "IsTemporary=true" accounts, and then starts spamming my log again.
For now it just keeps spamming my log files, but if we could come up with a fix or workaround, that would be really great.
I am using Fedora 29, and the version of gnome-online-accounts is gnome-online-accounts-3.30.0-3.fc29.x86_64
Disclaimer: this is a copy of the bug in the Red Hat bugtracker that got ignored completely: https://bugzilla.redhat.com/show_bug.cgi?id=1601438